<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world"
        android:textSize="@dimen/mediumSize"
        android:textColor="#3252a8"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:contentDescription="@string/my_plain"
        android:src="@mipmap/ic_plain" />

    <Button
        android:id="@+id/btn_show_second_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/view_the_second_activity" />

    <Button
        android:id="@+id/btn_show_third_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_the_third_activity"
        android:layout_gravity="center"
        android:layout_margin="10dp"/>

</LinearLayout>