<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/lbl_sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/sign_in"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lbl_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:labelFor="@id/in_user_name"
        android:text="@string/login"
        app:layout_constraintEnd_toStartOf="@id/in_user_name"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lbl_sign" />

    <EditText
        android:id="@+id/in_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="100dp"
        android:autofillHints="name"
        android:inputType="textPersonName"
        android:minWidth="60dp"
        android:minHeight="48dp"
        app:layout_constraintBaseline_toBottomOf="@id/lbl_login"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="72dp" />

    <TextView
        android:id="@+id/lbl_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:labelFor="@id/in_password"
        android:text="@string/password"
        app:layout_constraintStart_toStartOf="@+id/lbl_login"
        app:layout_constraintTop_toBottomOf="@id/lbl_login" />

    <EditText
        android:id="@+id/in_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="112dp"
        android:autofillHints="password"
        android:inputType="textPassword"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:layout_constraintBaseline_toBottomOf="@id/lbl_password"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="131dp" />

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lbl_password"
        tools:layout_editor_absoluteX="92dp"
        tools:layout_editor_absoluteY="214dp" />

    <TextView
        android:id="@+id/lbl_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#3F51B5"
        android:text="@string/press_submit_button_and_see_result"
        android:textColor="#FFC107"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/submit" />

</androidx.constraintlayout.widget.ConstraintLayout>