<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".FourthActivity">
        
        <ImageView
            android:id="@+id/poster"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="16:9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/poster"
            tools:src="@tools:sample/backgrounds/scenic" />

        <ImageView
            android:layout_width="116dp"
            android:layout_height="175dp"
            tools:src="@tools:sample/avatars"
            app:layout_constraintTop_toBottomOf="@id/poster"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/avatar"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/avatar" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/title"
            app:layout_constraintTop_toTopOf="@id/avatar"
            app:layout_constraintStart_toEndOf="@id/avatar"
            tools:text="@tools:sample/cities"
            android:textSize="25sp"
            android:textStyle="bold"
            android:gravity="start"
            android:layout_marginStart="8dp"
            android:textColor="@color/colorAccent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/released_date"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintStart_toStartOf="@id/title"
            android:text="@string/released_date"
            android:layout_marginTop="4dp"
            android:gravity="start"
            android:textColor="@color/gray"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/date"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/released_date"
            app:layout_constraintBaseline_toBaselineOf="@+id/released_date"
            tools:text="@tools:sample/date/ddmmyy"
            android:layout_marginTop="4dp"
            android:layout_marginStart="8dp"
            android:gravity="start"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/click_btn"
            app:layout_constraintTop_toBottomOf="@id/date"
            app:layout_constraintStart_toStartOf="@id/date"
            android:text="@string/version_trailer"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/overview_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:gravity="start"
            android:text="@string/overview"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/released_date"
            app:layout_constraintTop_toBottomOf="@id/avatar" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/overview_text"
            app:layout_constraintTop_toBottomOf="@id/overview_title"
            tools:text="@tools:sample/lorem/random"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="16sp"
            android:gravity="start"
            android:layout_margin="8dp"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>